Update with week 3 material
Update project settings for custom game mode, add custom player controller and custom player character blueprints

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/ProgrammingDoors.ProgrammingDoors
 EditorStartupMap=/Game/Maps/ProgrammingDoors.ProgrammingDoors
+GlobalDefaultGameMode=/Game/GameMode/BP_CustomGameMode.BP_CustomGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
