--- a/.gitignore
+++ b/.gitignore
@@ -506,3 +506,4 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,c++,visualstudio
 *.fbx
+Content/SoulCave/*
