Week 8 - Gameplay loop updates
update objective widget
refactor code
update maps/configs
update gitignore

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/ProgrammingDoors.ProgrammingDoors
-EditorStartupMap=/Game/Maps/ProgrammingDoors.ProgrammingDoors
+EditorStartupMap=/Game/Maps/MenuLevel.MenuLevel
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MenuLevel.MenuLevel
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GameMode/BP_CustomGameMode.BP_CustomGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -19,6 +29,9 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure=True
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
