--- a/.gitignore
+++ b/.gitignore
@@ -507,3 +507,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/unrealengine,c++,visualstudio
 *.fbx
 Content/SoulCave/*
+Content/EnvironmentPack3/*
