Update with week 11 - Effects
- add sounds
- add camera effects
- use BP Implementable Events
- animations in widgets

--- a/ProgrammingDoors.uproject
+++ b/ProgrammingDoors.uproject
@@ -10,11 +10,16 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"UMG"
+				"UMG",
+				"GameplayCameras"
 			]
 		}
 	],
 	"Plugins": [
+		{
+			"Name": "GameplayCameras",
+			"Enabled": true
+		},
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true,
